[package]
name = "mqtt-prometheus-relay"
version = "0.0.6"
edition = "2024"

[dependencies]
axum = "0.8.4"
clap = { version = "4.5.46", features = ["derive"] }
rumqttc = "0.24.0"
tokio = { version = "1.47.1", default-features = false, features = ["rt", "macros", "parking_lot", "signal", "sync", "time", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
anyhow = "1.0.99"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.0", features = ["v4"] }
dashmap = "6.1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
